[package]
name = "bitcoin-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
varint = { git = "https://github.com/cyber-coop/varint", branch = "main" }
[dev-dependencies]
hex = "0.4.3"
